[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wellrx-tcl"
version = "0.1.0"
description = "Gas well critical-velocity (Turner, Coleman, Lea) calculator for Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "WellRX", email = "wellrx@wellrx.app" },
]
keywords = [
  "petroleum-engineering",
  "production-engineering",
  "gas-well",
  "liquid-loading",
  "critical-velocity",
  "turner",
  "coleman",
  "lea",
  "oilfield",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://wellrx.app/tools/critical-velocity/"
Calculator = "https://wellrx.app/tools/critical-velocity/"
Documentation = "https://github.com/heyfinal/wellrx-tcl#readme"
Source = "https://github.com/heyfinal/wellrx-tcl"
"Field Guide" = "https://wellrx.app/learn/liquid-loading-early-warning-signs/"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["wellrx_tcl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
